TestVerifier: fix deprecated finalize()